--- a/locale/po/grasswxpy_fr.po
+++ b/locale/po/grasswxpy_fr.po
@@ -10,7 +10,7 @@ msgstr ""
 "POT-Creation-Date: 2009-01-09 17:00+0100\n"
 "PO-Revision-Date: 2008-11-06 23:26+0100\n"
 "Last-Translator: ANDRE Benoit <benoit.andre@bcgeol.be>\n"
-"Language-Team: Français <fr@li.org>\n"
+"Language-Team: français <grass-translations@lists.osgeo.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
