--- a/locale/po/grassmods_de.po
+++ b/locale/po/grassmods_de.po
@@ -16284,7 +16284,7 @@ msgstr "Name einer vorhandenen Rasterkarte, die angezeigt werden soll."
 
 #: ../vector/lidar/v.outlier/main.c:109
 #: ../vector/lidar/v.surf.bspline/main.c:138
-msgid "Thychonov regularization weigth"
+msgid "Tychonov regularization weight"
 msgstr ""
 
 #: ../vector/lidar/v.outlier/main.c:116
