--- a/locale/po/grassmods_fr.po
+++ b/locale/po/grassmods_fr.po
@@ -17611,7 +17611,7 @@ msgstr "Nom de la seconde couche raster pour le mélange"
 
 #: ../vector/lidar/v.outlier/main.c:109
 #: ../vector/lidar/v.surf.bspline/main.c:138
-msgid "Thychonov regularization weigth"
+msgid "Tychonov regularization weight"
 msgstr ""
 
 #: ../vector/lidar/v.outlier/main.c:116
