--- a/locale/po/grassmods_it.po
+++ b/locale/po/grassmods_it.po
@@ -16379,7 +16379,7 @@ msgstr "Nome di una mappa raster esistente"
 
 #: ../vector/lidar/v.outlier/main.c:109
 #: ../vector/lidar/v.surf.bspline/main.c:138
-msgid "Thychonov regularization weigth"
+msgid "Tychonov regularization weight"
 msgstr ""
 
 #: ../vector/lidar/v.outlier/main.c:116
