--- a/locale/po/grassmods_mr.po
+++ b/locale/po/grassmods_mr.po
@@ -15792,7 +15792,7 @@ msgstr "'%s'. ड्राइवर चालू होत नाही"
 
 #: ../vector/lidar/v.outlier/main.c:109
 #: ../vector/lidar/v.surf.bspline/main.c:138
-msgid "Thychonov regularization weigth"
+msgid "Tychonov regularization weight"
 msgstr ""
 
 #: ../vector/lidar/v.outlier/main.c:116
