--- a/locale/po/grassmods_pt_br.po
+++ b/locale/po/grassmods_pt_br.po
@@ -17093,7 +17093,7 @@ msgstr "Nome de um mapa raster para exibir"
 
 #: ../vector/lidar/v.outlier/main.c:109
 #: ../vector/lidar/v.surf.bspline/main.c:138
-msgid "Thychonov regularization weigth"
+msgid "Tychonov regularization weight"
 msgstr ""
 
 #: ../vector/lidar/v.outlier/main.c:116
