--- a/locale/po/grassmods_vi.po
+++ b/locale/po/grassmods_vi.po
@@ -16949,8 +16949,8 @@ msgstr "Tên của bản đồ vector để xem trong qgis"
 
 #: ../vector/lidar/v.outlier/main.c:109
 #: ../vector/lidar/v.surf.bspline/main.c:138
-msgid "Thychonov regularization weigth"
-msgstr "Trọng số phép chính quy hóa Tykhonov"
+msgid "Tychonov regularization weight"
+msgstr "Trọng số phép chính quy hóa Tychonov"
 
 #: ../vector/lidar/v.outlier/main.c:116
 msgid "Threshold for the outliers"
