--- a/locale/po/grassmods_zh.po
+++ b/locale/po/grassmods_zh.po
@@ -16366,7 +16366,7 @@ msgstr "需要查询的已有栅格地图的名称"
 
 #: ../vector/lidar/v.outlier/main.c:109
 #: ../vector/lidar/v.surf.bspline/main.c:138
-msgid "Thychonov regularization weigth"
+msgid "Tychonov regularization weight"
 msgstr ""
 
 #: ../vector/lidar/v.outlier/main.c:116
