--- a/locale/po/grassmods_ja.po
+++ b/locale/po/grassmods_ja.po
@@ -16729,7 +16729,7 @@ msgstr "対象マップ2"
 
 #: ../vector/lidar/v.outlier/main.c:109
 #: ../vector/lidar/v.surf.bspline/main.c:138
-msgid "Thychonov regularization weigth"
+msgid "Tychonov regularization weight"
 msgstr ""
 
 #: ../vector/lidar/v.outlier/main.c:116
