--- a/locale/po/grassmods_ko.po
+++ b/locale/po/grassmods_ko.po
@@ -15655,7 +15655,7 @@ msgstr "출력할 래스터맵"
 
 #: ../vector/lidar/v.outlier/main.c:109
 #: ../vector/lidar/v.surf.bspline/main.c:138
-msgid "Thychonov regularization weigth"
+msgid "Tychonov regularization weight"
 msgstr ""
 
 #: ../vector/lidar/v.outlier/main.c:116
