--- a/locale/po/grassmods_lv.po
+++ b/locale/po/grassmods_lv.po
@@ -16235,7 +16235,7 @@ msgstr "Eksistējošas rastra kartes nosaukums"
 
 #: ../vector/lidar/v.outlier/main.c:109
 #: ../vector/lidar/v.surf.bspline/main.c:138
-msgid "Thychonov regularization weigth"
+msgid "Tychonov regularization weight"
 msgstr ""
 
 #: ../vector/lidar/v.outlier/main.c:116
