--- a/locale/po/grassmods_pl.po
+++ b/locale/po/grassmods_pl.po
@@ -16371,7 +16371,7 @@ msgstr "Nazwa drugiej mapy rastrowej do wymieszania"
 
 #: ../vector/lidar/v.outlier/main.c:109
 #: ../vector/lidar/v.surf.bspline/main.c:138
-msgid "Thychonov regularization weigth"
+msgid "Tychonov regularization weight"
 msgstr ""
 
 #: ../vector/lidar/v.outlier/main.c:116
