--- a/locale/po/grassmods_sl.po
+++ b/locale/po/grassmods_sl.po
@@ -16657,7 +16657,7 @@ msgstr "Ime obstojeèega rastrskega sloja"
 
 #: ../vector/lidar/v.outlier/main.c:109
 #: ../vector/lidar/v.surf.bspline/main.c:138
-msgid "Thychonov regularization weigth"
+msgid "Tychonov regularization weight"
 msgstr ""
 
 #: ../vector/lidar/v.outlier/main.c:116
