--- a/locale/po/grassmods_es.po
+++ b/locale/po/grassmods_es.po
@@ -16881,7 +16881,7 @@ msgid "Spline type of interpolation"
 msgstr "Tipo spline de interpolación"
 
 #: ../vector/lidar/v.surf.bspline/main.c:147 ../vector/v.surf.rst/main.c:206
-msgid "Field value. If set to 0, z coordinates are used. (3D vector only)"
+msgid "If set to 0, z coordinates are used. (3D vector only)"
 msgstr ""
 "Valor de campo. Si se establece a 0, se usarán las coordenadas Z (sólo "
 "vectoriales 3D)"
