--- a/locale/po/grassmods_fr.po
+++ b/locale/po/grassmods_fr.po
@@ -17787,10 +17787,9 @@ msgid "Spline type of interpolation"
 msgstr "La valeur en sortie est l'erreur d'interpolation"
 
 #: ../vector/lidar/v.surf.bspline/main.c:145 ../vector/v.surf.rst/main.c:206
-msgid "Field value. If set to 0, z coordinates are used. (3D vector only)"
+msgid "If set to 0, z coordinates are used. (3D vector only)"
 msgstr ""
-"Valeur du champ. Si fixée à 0, les coordonnées z sont utilisées (vecteur 3D "
-"seulement)"
+"Si fixée à 0, les coordonnées z sont utilisées (vecteur 3D seulement)"
 
 #: ../vector/lidar/v.surf.bspline/main.c:155
 msgid "Attribute table column with values to interpolate (if layer>0)"
