--- a/locale/po/grassmods_hi.po
+++ b/locale/po/grassmods_hi.po
@@ -16936,7 +16936,7 @@ msgstr "संख्या का"
 
 #: ../vector/lidar/v.surf.bspline/main.c:145 ../vector/v.surf.rst/main.c:206
 #, fuzzy
-msgid "Field value. If set to 0, z coordinates are used. (3D vector only)"
+msgid "If set to 0, z coordinates are used. (3D vector only)"
 msgstr "फील्ड सेट ज़ेड"
 
 #: ../vector/lidar/v.surf.bspline/main.c:155
