--- a/locale/po/grassmods_lv.po
+++ b/locale/po/grassmods_lv.po
@@ -16401,7 +16401,7 @@ msgid "Spline type of interpolation"
 msgstr ""
 
 #: ../vector/lidar/v.surf.bspline/main.c:145 ../vector/v.surf.rst/main.c:206
-msgid "Field value. If set to 0, z coordinates are used. (3D vector only)"
+msgid "If set to 0, z coordinates are used. (3D vector only)"
 msgstr ""
 
 #: ../vector/lidar/v.surf.bspline/main.c:155
