--- a/locale/po/grassmods_pt_br.po
+++ b/locale/po/grassmods_pt_br.po
@@ -17273,10 +17273,9 @@ msgid "Spline type of interpolation"
 msgstr "Saída é o erro de interpolação"
 
 #: ../vector/lidar/v.surf.bspline/main.c:145 ../vector/v.surf.rst/main.c:206
-msgid "Field value. If set to 0, z coordinates are used. (3D vector only)"
+msgid "If set to 0, z coordinates are used. (3D vector only)"
 msgstr ""
-"Valor do campo. Se definido em 0, coordenadas z serão usadas. (vetor 3D "
-"apenas)"
+"Se definido em 0, coordenadas z serão usadas. (vetor 3D apenas)"
 
 #: ../vector/lidar/v.surf.bspline/main.c:155
 msgid "Attribute table column with values to interpolate (if layer>0)"
