--- a/locale/po/grassmods_ru.po
+++ b/locale/po/grassmods_ru.po
@@ -16549,10 +16549,9 @@ msgid "Spline type of interpolation"
 msgstr "Сплайн интерполяция"
 
 #: ../vector/lidar/v.surf.bspline/main.c:145 ../vector/v.surf.rst/main.c:206
-msgid "Field value. If set to 0, z coordinates are used. (3D vector only)"
+msgid "If set to 0, z coordinates are used. (3D vector only)"
 msgstr ""
-"Значение поля. Если установлено в 0, используются координаты z (только 3D "
-"вектор)"
+"Если установлено в 0, используются координаты z (только 3D вектор)"
 
 #: ../vector/lidar/v.surf.bspline/main.c:155
 msgid "Attribute table column with values to interpolate (if layer>0)"
