--- a/locale/po/grassmods_sl.po
+++ b/locale/po/grassmods_sl.po
@@ -16828,7 +16828,7 @@ msgid "Spline type of interpolation"
 msgstr "Izhodni rastrski sloj naj vsebuje interpolacijske napake"
 
 #: ../vector/lidar/v.surf.bspline/main.c:145 ../vector/v.surf.rst/main.c:206
-msgid "Field value. If set to 0, z coordinates are used. (3D vector only)"
+msgid "If set to 0, z coordinates are used. (3D vector only)"
 msgstr ""
 
 #: ../vector/lidar/v.surf.bspline/main.c:155
