--- a/locale/po/grassmods_th.po
+++ b/locale/po/grassmods_th.po
@@ -16174,8 +16174,8 @@ msgid "Spline type of interpolation"
 msgstr "ชนิด Spline ของการ  interpolation"
 
 #: ../vector/lidar/v.surf.bspline/main.c:145 ../vector/v.surf.rst/main.c:206
-msgid "Field value. If set to 0, z coordinates are used. (3D vector only)"
-msgstr "ค่า Field. ถ้ากำหนดเป็น 0, จะใช้ค่าพิกัด z แทน. (เท่านั้น 3D vector)"
+msgid "If set to 0, z coordinates are used. (3D vector only)"
+msgstr "ถ้ากำหนดเป็น 0, จะใช้ค่าพิกัด z แทน. (เท่านั้น 3D vector)"
 
 #: ../vector/lidar/v.surf.bspline/main.c:155
 msgid "Attribute table column with values to interpolate (if layer>0)"
