--- a/locale/po/grassmods_vi.po
+++ b/locale/po/grassmods_vi.po
@@ -17118,9 +17118,9 @@ msgid "Spline type of interpolation"
 msgstr "Kiểu đường spline của phép nội suy"
 
 #: ../vector/lidar/v.surf.bspline/main.c:145 ../vector/v.surf.rst/main.c:206
-msgid "Field value. If set to 0, z coordinates are used. (3D vector only)"
+msgid "If set to 0, z coordinates are used. (3D vector only)"
 msgstr ""
-"Giá trị trường. Nếu là 0, các tọa độ z được dùng. (Chỉ áp dụng cho vector 3D)"
+"Nếu là 0, các tọa độ z được dùng. (Chỉ áp dụng cho vector 3D)"
 
 #: ../vector/lidar/v.surf.bspline/main.c:155
 msgid "Attribute table column with values to interpolate (if layer>0)"
