--- a/locale/po/grasswxpy_pl.po
+++ b/locale/po/grasswxpy_pl.po
@@ -1543,11 +1543,11 @@ msgstr "nadpisz istniejący plik"
 
 #: ../gui/wxpython/gui_modules/mapdisp.py:89
 msgid "GRASS GIS - Map display"
-msgstr "GRASS GIS Okno mapy: "
+msgstr "GRASS GIS - Okno mapy"
 
 #: ../gui/wxpython/gui_modules/mapdisp.py:163
 msgid "Render"
-msgstr "_Renderuj"
+msgstr "Renderuj"
 
 #: ../gui/wxpython/gui_modules/mapdisp.py:166
 msgid "Enable/disable auto-rendering"
@@ -1703,7 +1703,7 @@ msgstr "Pokaż/ukryj legendę"
 
 #: ../gui/wxpython/gui_modules/mapdisp.py:1487
 msgid "legend object"
-msgstr "legenda"
+msgstr "legenda obiekt"
 
 #: ../gui/wxpython/gui_modules/mapdisp.py:1559
 #: ../gui/wxpython/gui_modules/wxgui_utils.py:268
