--- a/gui/wxpython/README
+++ b/gui/wxpython/README
@@ -8,8 +8,8 @@ $Date$
  GRASS GIS >= 6.3
  Python >= 2.4 (Python 3 not supported)
  	Python ElementTree (only for Python <= 2.4)
- wxPython >= 2.8.1.1
- swig >= 1.3.31 (required only for vector digitizer)
+ wxPython >= 2.8.1.1 (wxPython <= 2.8.9.2 requires swig <= 1.3.36)
+ swig >= 1.3.31 (required for vector digitizer and nviz extension)
  NumPy >= 1.0.4
  
  Get wxPython 2.8.x packages from:
@@ -61,7 +61,7 @@ $Date$
 If you want to launch wxPython GUI automatically when you start
 GRASS, edit your .grassrc6 file to replace
 
-GRASS_GUI: tcktk (or whatever you have here)
+GRASS_GUI: tcltk (or whatever you have here)
 
 with
 
@@ -69,7 +69,7 @@ GRASS_GUI: wxpython
 
 or easier start new GRASS session with -wxpython switch.
 
-$ grass64 -wxpython
+$ grass65 -wxpython
 
 
 3 - STARTUP FROM GRASS TERMINAL
@@ -101,7 +101,7 @@ $~ export PATH=scripts/:$PATH
 
 Start GRASS:
 
-$~ grass64 ~/grassdata/spearfish60/user1
+$~ grass65 ~/grassdata/spearfish60/user1
 
 Use command p.mon (shell script in gui/scripts directory) to start map
 display:
