translation fix (trac https://trac.osgeo.org/grass/ticket/601)
git-svn-id: https://svn.osgeo.org/grass/grass/branches/develbranch_6@37190 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/locale/po/grasstcl_it.po
+++ b/locale/po/grasstcl_it.po
@@ -3589,8 +3589,8 @@ msgid "     Layer for labels"
 msgstr "     Layer per labels"
 
 #: ../gui/tcltk/gis.m/vector.tcl:448
-msgid "   Attribute col for labels"
-msgstr " Colori campi per labels"
+msgid "   Attribute column for labels"
+msgstr " Colonna di attributo per le etichette"
 
 #: ../gui/tcltk/gis.m/vector.tcl:455
 msgid "Query vectors for display: "
